@@ -28,3 +28,7 @@ Revisions:
 [10/14/2014] New: /stat /craft
 [10/14/2014] New: Added load-balance to sync and included craft traits.
 [10/14/2014] Fix: /mail /purge
+[10/15/2014] New: Added api version 10010 support.
+[10/15/2014] Release: v1.91 submitted
+[10/16/2014] Fix: new quest event exception
+[10/16/2014] Release: v1.92 submitted
